[package]
name = "bevy_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version = "0.6.1", features = ["dynamic", "wayland"]}
bevy-inspector-egui = "0.9.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
bevycheck = "0.2.0"
csv = "1.1.6"

[workspace.metadata.dylint]
libraries = [
    { git = "https://github.com/MinerSebas/bevy_lint", branch = "main" },
]

[profile.dev]
opt-level = 1
[profile.dev.package."*"]
opt-level = 3

